deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goweb
  namespace: dev
  labels:
    app: goweb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goweb
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
      labels:
        app: goweb
    spec:
      containers:
        - name: goweb
          image: goweb:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 200m
