service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goweb
  namespace: dev
spec:
  selector:
    app: goweb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
