ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goweb
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: goweb.cluster.local
      http:
        paths:
          - backend:
              service:
                name: goweb
                port:
                  number: 80
            path: /
            pathType: Prefix
